add static logic to login and register

--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -10,10 +10,10 @@ import Layout from "../layouts/Layout.astro";
         <Icon size={24} name="fa6-solid:arrow-right-from-bracket" /> Return to Homepage
       </a>
       <h1>Login.</h1>
-      <form>
+      <form id="form">
         <div class="input-row">
           <Icon size={24} name="fa6-solid:envelope" />
-          <input type="email" id="email" name="email" placeholder="Email" />
+          <input type="email" id="email" name="email" placeholder="Email" required />
         </div>
         <div class="input-row">
           <Icon size={24} name="fa6-solid:lock" />
@@ -22,6 +22,7 @@ import Layout from "../layouts/Layout.astro";
             id="password"
             name="password"
             placeholder="Password"
+            required
           />
         </div>
         <div id="forgot-password">
@@ -36,6 +37,40 @@ import Layout from "../layouts/Layout.astro";
     </div>
   </main>
 </Layout>
+
+<script>
+  const emailList = [
+    {
+      email: "admin@veehac.com",
+      role: "admin",
+    },
+    {
+      email: "judge1@veehac.com",
+      role: "judge",
+    },
+    {
+      email: "judge2@veehac.com",
+      role: "judge",
+    },
+  ]
+  document.querySelector("#form")?.addEventListener("submit", (e) => {
+    e.preventDefault();
+    const email = (document.querySelector("#email") as HTMLInputElement).value;
+    
+    const user = emailList.find((user) => user.email === email);
+    if (user) {
+      if (user.role === "admin") {
+        window.location.href = "/admin";
+      } else if (user.role === "judge") {
+        window.location.href = "/judge-dashboard";
+      } else {
+        window.location.href = "/participant-dashboard";
+      }
+    } else {
+      window.location.href = "/participant-dashboard";
+    }
+  });
+</script>
 
 <style>
   body {
