conform judge name to brendan's

--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -45,11 +45,23 @@ import Layout from "../layouts/Layout.astro";
       role: "admin",
     },
     {
-      email: "judge1@veehac.com",
+      email: "olajide@prime.com",
       role: "judge",
     },
     {
-      email: "judge2@veehac.com",
+      email: "hailey@htuah.com",
+      role: "judge",
+    },
+    {
+      email: "jimmy@mrbeast.com",
+      role: "judge",
+    },
+    {
+      email: "naija@spice.com",
+      role: "judge",
+    },
+    {
+      email: "uncle@roger.com",
       role: "judge",
     },
   ]
