--- a/src/components/ProjectSubmissionForm.astro
+++ b/src/components/ProjectSubmissionForm.astro
@@ -4,7 +4,7 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
   />
   <div class="body">
-    <h2>Project Submission</h2>
+    <h2 style="margin-top: 0%;">Project Submission</h2>
     <form id="project-submission-form">
       <div>
         <div class="full-width-underline">1. Project Name & Description:</div>
@@ -141,6 +141,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 0rem;
+    padding: 0rem;
     border-radius: 8px;
     height: auto; /* Adjust height to account for margin */
     background-color: #f0f0f0;
@@ -155,6 +157,8 @@
     color: black;
     background-color: white;
     padding: 1rem;
+    padding-top: 0rem;
+    margin-top: 0rem;
     border-radius: 8px;
     overflow-y: auto;
     margin: 0;
