--- a/src/styles/underline.css
+++ b/src/styles/underline.css
@@ -4,14 +4,17 @@
   display: inline-block;
   width: 100%; /* Make the label span the entire width */
   margin-bottom: 0.5rem; /* Add margin to the label */
+  color: black;
+  font-weight: bold;
 }
 
-.full-width-underline::after {
+
+.full-width-underline:after {
   content: "";
   position: absolute;
   left: 0;
   bottom: -2px; /* Adjust this value to control the distance from the text */
-  width: 80vw; /* Make the underline span the entire width of the viewport */
+  width: 100%; /* Make the underline span the entire width of the element */
   height: 2px; /* Adjust this value to control the thickness of the underline */
-  background-color: white; /* Set the color of the underline */
+  background-color: black; /* Set the color of the underline */
 }
