Update case studies title, enhance navbar functionality, and improve person card component with dynamic data

--- a/src/components/CaseStudies.astro
+++ b/src/components/CaseStudies.astro
@@ -35,7 +35,7 @@ const items = [
 ---
 
 <div class="carousel-container">
-  <p style="font-size: 36px;">Case Studies</p>
+  <p style="font-size: 36px;">CASE STUDIES</p>
   <div class="carousel">
     {
       items.map((item, index) => (
