--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -93,13 +93,13 @@ const showCaseStudies = currentDate < targetDate;
         </div>
         <div>
           <p style="font-size: 48px; font-weight: 900; color: #89AFFF;">
-            SKIBIDI. OHIO. GYAT.
+            CODE, CREATE, COLLAB
           </p>
         </div>
         <div class="about-paragraph">
           We are HTML (Help and Tips for Machine Learning) Society in USM. This
-          is our first hackathon! We are definitely not stealing ANYTHING for
-          VHack!
+          is our first hackathon! We are excited to see what you can come up
+          with and are looking for innovative ideas that can change the world.
         </div>
       </div>{
         showCaseStudies ? (
