--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -45,11 +45,15 @@ import Layout from "../layouts/Layout.astro";
       role: "admin",
     },
     {
+      email: "judge@veehac.com",
+      role: "judge",
+    },
+    {
       email: "olajide@prime.com",
       role: "judge",
     },
     {
-      email: "hailey@h tuah.com",
+      email: "hailey@htuah.com",
       role: "judge",
     },
     {
