Refactor footer and navbar links for consistency, remove FAQ and timeline pages, and enhance smooth scrolling behavior

--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -7,10 +7,10 @@ const { backgroundColor } = Astro.props;
     <a href="/" style="font-weight: 900; font-size: 48px;">V</a>
     <div class="navbar-contents">
       <div class="navbar-item">
-        <a href="/timeline">Timeline</a>
+        <a href="/#timeline">Timeline</a>
       </div>
       <div class="navbar-item">
-        <a href="/faq">FAQ</a>
+        <a href="/#faq">FAQ</a>
       </div>
 
       <div class="navbar-item">
@@ -19,8 +19,8 @@ const { backgroundColor } = Astro.props;
       <div class="navbar-item">
         <a href="/about">About</a>
       </div>
-      <div class="navbar-item login">
-        <a style="color: #433F6C" href="/login" id="login-button"></a>
+      <div class="navbar-item">
+        <a href="/login" id="login-button"></a>
       </div>
       <div class="navbar-item login" id="logout">
         <a style="color: #433F6C" href="#" onclick="logout">Log Out</a>
