--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,27 +5,24 @@
 <footer class="footer">
   <div class="footer-content">
     <div class="social-icons">
-      <a href="https://www.instagram.com" target="_blank" class="social-icon">
-        <i class="fab fa-instagram"></i>
-      </a>
       <a href="https://www.facebook.com" target="_blank" class="social-icon">
         <i class="fab fa-facebook-f"></i>
       </a>
+      <a href="https://www.instagram.com" target="_blank" class="social-icon">
+        <i class="fab fa-instagram"></i>
+      </a>
       <a
-        href="https://github.com/nyshung/veehac"
+        href="https://github.com/ynshung/veehac"
         target="_blank"
         class="social-icon"
       >
         <i class="fab fa-github"></i>
       </a>
-      <a href="https://www.linkedin.com" target="_blank" class="social-icon">
-        <i class="fab fa-onlyfans-in"></i>
-      </a>
     </div>
 
     <div class="footer-links">
-      <a href="/timeline" class="footer-link">Timeline</a>
-      <a href="/faq" class="footer-link">FAQ</a>
+      <a href="/#timeline" class="footer-link">Timeline</a>
+      <a href="/#faq" class="footer-link">FAQ</a>
       <a href="/winners" class="footer-link">Winners</a>
       <a href="/about" class="footer-link">About</a>
       <a href="/login" class="footer-link">Login</a>
