--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,4 +30,7 @@ const { title } = Astro.props;
     margin: 0;
     font-family: "Chesna Grotesk", sans-serif;
   }
+  html {
+    scroll-behavior: smooth;
+  }
 </style>
