Update Case Study for Consistency

--- a/src/components/ProjectSubmissionForm.astro
+++ b/src/components/ProjectSubmissionForm.astro
@@ -21,9 +21,11 @@
           name="case-study"
           form="project-submission-form"
         >
-          <option>Case Study 1: Web Application</option>
-          <option>Case Study 2: Educational Mobile App</option>
-          <option>Case Study 3: E-commerce Platform</option>
+          <option>Case Study 1: Sustainable Agriculture in Kenya</option>
+          <option>Case Study 2: Renewable Energy in India</option>
+          <option>Case Study 3: Women Empowerment in Bangladesh</option>
+          <option>Case Study 4: Clean Water Initiatives in Ghana</option>
+          <option>Case Study 5: Conservation of Marine Life in the Philippines</option>
         </select>
       </div>
       <div>
