--- a/src/pages/register.astro
+++ b/src/pages/register.astro
@@ -48,7 +48,10 @@ import Layout from "../layouts/Layout.astro";
 <script>
   document.querySelector("#form")?.addEventListener("submit", (e) => {
     e.preventDefault();
-    window.location.href = "/dashboard";
+
+    
+
+    window.location.href = "/login";
   });
 </script>
 
