--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -19,8 +19,8 @@ const { backgroundColor } = Astro.props;
       <div class="navbar-item">
         <a href="/about">About</a>
       </div>
-      <div class="navbar-item">
-        <a href="/login" id="login-button"></a>
+      <div class="navbar-item login">
+        <a style="color: #433F6C" href="/login" id="login-button"></a>
       </div>
       <div class="navbar-item login" id="logout">
         <a style="color: #433F6C" href="#" onclick="logout">Log Out</a>
