i dont even know anymore

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -23,7 +23,7 @@
     <div class="footer-links">
       <a href="/#timeline" class="footer-link">Timeline</a>
       <a href="/#faq" class="footer-link">FAQ</a>
-      <a href="/winners" class="footer-link">Winners</a>
+      <a href="/winner" class="footer-link">Winners</a>
       <a href="/about" class="footer-link">About</a>
       <a href="/login" class="footer-link">Login</a>
     </div>
