--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -62,7 +62,7 @@ const judges = [
     <div class="body">
         <div class="judges">
             <div >
-                <p style="font-size: 36px;">Judges</p>
+                <p style="font-size: 36px; padding:20px">Judges</p>
             </div>
             
             <div class="judge-cards">
